# nutritayaneventura.github.io

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  todo.txt
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py  endpoints.py  models.py
app/services/: __init__.py  game_logic.py  image_service.py  llm.py  llm_service.py  logger.py
app/static/css/: emoji.css  font-awesome.min.css  styles.css
app/static/js/: main.js  scripts.js  sweetalert2.js
app/templates/: index.html
docs/: Makefile  index.html  main.py  robots.txt  script.js  sitemap.xml  styles.css
docs/api/: endpoints.py
docs/css/: styles.css
tests/: test_app.py
