[tool.poetry]
name = "ai-rpg"
version = "0.1.0"
description = "AI Powered RPG"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

# Tell Poetry to include the "app" folder as the package.
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
requests = "^2.32.3"
jinja2 = "^3.1.5"
langchain-core = "^0.3.37"
langchain-ollama = "^0.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
