[tool.poetry]
name = "tay-website"
version = "1.0.0"
description = "Website Nutri Tayane Ventura"
authors = ["Brenno Lins"]

# Tell Poetry to include the "docs" folder as the package.
packages = [
    { include = "docs" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
requests = "^2.32.3"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
